--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,18 @@
     background-color: #ffb2b2;
     color: white;
 }
+/* Link colors */
+a {
+    text-decoration: none;
+    color: #95d6ff;
+    -webkit-transition: 0.6s;
+	-moz-transition: 0.6s;
+	-o-transition: 0.6s;
+	transition: 0.6s;
+}
+a:hover {
+    color: #5753c1;
+}
 
 /* Make container full page width */
 .container {
@@ -29,12 +41,12 @@
     background: linear-gradient(to right, rgba(124,169,235,1) 0%, rgba(175,139,240,1) 100%);
 }
 
-/* Name and subtitle */
+/* Name, subtitle, summary */
 .intro {
     cursor: default;
     text-align: center;
     color: white;
-    padding-top: 35vh;
+    padding-top: 30vh;
     font-family: 'Nunito', sans-serif;
 }
 /* Name */
@@ -47,27 +59,48 @@
 .intro h2 {
     font-size: 6vmin;
     font-family: 'Montserrat Alternates', sans-serif;
+    margin: 0 auto;
+}
+/* Summary Paragraph */
+.summary {
+    height: 8vmin;
+    width: 40vmax;
+    margin: 5vh auto;
+    font-size: 12px;
+    font-family: 'Raleway', sans-serif;
+}
+@media only screen and (max-device-width: 736px) {
+    .summary {
+        height: 8vmax;
+        margin-bottom: 8vh;
+    }
 }
 
 /* Page Nav */
-.links {
-    margin-top: 45px;
-}
 .links a {
-    font-size: 14px;
     text-decoration: none;
     color: rgba(255, 255, 255, 0.7);
+}
+.links div {
+    width: 12vmax;
+    position: relative;
+    display: inline-block;
+    font-size: 14px;
     cursor: pointer;
-    padding: 10px 6vmin;
+    padding: 10px 0;
     text-transform: uppercase;
-    margin-top: 20px;
 	-webkit-transition: 0.4s;
 	-moz-transition: 0.4s;
 	-o-transition: 0.4s;
 	transition: 0.4s;
 	position: relative;
 }
-.links a::after {
+@media only screen and (max-device-width: 1040px) {
+    .links div {
+        width: 15vmax;
+    }
+}
+.links div::after {
     content:"";
     position: absolute;
     border-bottom: 2px solid rgba(255, 255, 255, 0.2);
@@ -80,13 +113,13 @@
 	-o-transition: 0.4s;
 	transition: 0.4s;
 }
-.links a:hover {
+.links div:hover {
     color: white;
 	-webkit-box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.1);
     -moz-box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.1);
     box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.1);
 }
-.links a:hover::after {
+.links div:hover::after {
     border-bottom-color: transparent;
     left: 0%;
     top: 100%;
