--- a/css/style.css
+++ b/css/style.css
@@ -1,151 +1,131 @@
 a {
-    color: #737e98;
-    transition: 0.2s;
+    color: #6f8aaf;
+    transition: 0.25s;
     font-weight: 800;
 }
 a:hover {
-    color: #2a52b1
+    color: #3e5679;
 }
-
 body {
     margin: 0;
     font-family: 'Nunito Sans', sans-serif;
-    color: #4b4b4b;
+    color: #55555d;
+    background-color: #f5f7fc;
 }
 
-/* Flex container */
-.container {
-    display: flex;
-    position: relative;
-}
-
-/* For horiztonally aligned divs */
-.container > div {
-    padding: 80px;
-    box-sizing: border-box;
-    padding-top: 30vh;
-}
-@media (max-width: 1056px) {
+/* Small Screen: vertical */
+@media (max-width: 768px) {
     .container > div {
-        padding: 65px;
-        padding-top: 30vh;
+        padding: 6vw;
+    }
+    .left-block {
+        padding-top: 8vh !important;
+    }
+}
+
+/* Medium Screen: 3:7 ratio, horizontal */
+@media (min-width: 769px) {
+    .container {
+        display: flex;
+    }
+    .container > div {
         box-sizing: border-box;
+        padding: 5vw;
+        padding-top: 27vh;
+        height: 100vh;
     }
-}
-@media (max-width: 700px) {
-    .container > div {
-        padding-top: 10vh;
+    .container > div h2 {
+        margin-bottom: 10vh;
     }
-}
-@media (max-width: 425px) {
-    .container > div {
-        padding: 50px;
-        padding-top: 70px;
-        box-sizing: border-box;
-    }
-}
-
-/* ============= The Color Block ============= */
-/* For wide screens */
-.color-block {
-    background-color: #ffa79b;
-    width: 30vw;
-    height: 100vh;
-    position: fixed;
-}
-@media (max-width: 900px) { 
-    .color-block {
+    .left-block {
         width: 40vw;
-    }
-}
-@media (max-width: 700px) { 
-    .color-block {
         position: fixed;
-        width: 100vw;
-        height: 30vw;
     }
-}
-/* Name */
-.color-block h1 {
-    color: white;
-    font-family: 'Miriam Libre', sans-serif;
-    font-size: 5vmax;
-    letter-spacing: 5px;
-    margin: 0;
-}
-@media (max-width: 700px) {
-    .color-block h1 {
-        font-size: 10vw;
-    }
-}
-
-/* Intro Text */ 
-.color-block p {
-    text-align: justify;
-}
-@media (max-width: 700px) {
-    .color-block p {
-        display: none;
-    }
-}
-/* Intro link section */
-.color-block .intro-links {
-    margin-top: 10vh;
-}
-@media (max-width: 700px) {
-    .color-block .intro-links {
-        margin-top: 20px;
-    }
-}
-
-/* Individual intro links */
-.color-block .intro-links a {
-    display: block;
-    margin-bottom: 10px;
-    width: 25%;
-}
-
-@media (max-width: 700px) {
-    .color-block .intro-links a {
-        display: inline;
-    }
-}
-
-
-/* ============= Portfolio ============= */
-/* For wide screens */
-.portfolio {
-    background-color: #f3faff;
-    width: 70vw;
-    margin-left: 30vw;
-}
-
-.portfolio h2 {
-    margin-bottom: 80px;
-}
-
-/* For medium screens */
-@media (max-width: 900px) { 
-    .portfolio {
+    .right-block {
         width: 60vw;
         margin-left: 40vw;
     }
 }
 
-/* For tiny screens */
-@media (max-width: 700px) { 
-    .portfolio {
-        width: 100vw;
-        margin-left: 0;
-        margin-top: 120px;
+/* Widest Screen:3.5:6.5 ratio, horizontal */
+@media (min-width: 1024px) {
+    .container {
+        display: flex;
+    }
+    .container > div {
+        box-sizing: border-box;
+        padding: 5vw;
+        padding-top: 27vh;
+        height: 100vh;
+    }
+    .container > div h2 {
+        margin-bottom: 10vh;
+    }
+    .left-block {
+        width: 35vw;
+        position: fixed;
+    }
+    .right-block {
+        width: 65vw;
+        margin-left: 35vw;
     }
 }
-.portfolio-item {
-    margin-bottom: 60px;
+
+/* ============= The Color Block ============= */
+
+.left-block {
+    background-color: #ffb5ac;
+    color: white;
 }
-.portfolio-item h3 {
+.name h1 {
+    color: white;
     font-family: 'Miriam Libre', sans-serif;
+    font-size: 7vmax;
+    letter-spacing: 10px;
+    margin: 0;
 }
-.portfolio-item p {
-    margin-top: 10px;
+.links {
+    display: flex;
+}
+.links a {
+    flex: 1;
+}
+
+
+
+/* ============= Portfolio ============= */
+
+.portfolio-item {
+    margin-bottom: 8vh;
+}
+
+@media (min-width: 769px) {
+    .portfolio-item {
+        display: flex;
+    }
+    .portfolio-title {
+        flex: 40%;
+    }
+    .portfolio-summary {
+        flex: 60%;
+    }
+}
+
+.about {
+    display: none;
+}
+.case-study {
+    display: none;
+}
+.case-study img {
+    width: 100%;
+    margin-bottom: 24px;
+}
+@media (min-width: 769px) {
+    .case-study img {
+        width: 50%;
+    }
+}
+.case-study > div {
+    margin-bottom: 48px;
 }
